<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTintMode="screen"
    tools:context=".ui.MainActivity"
    >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBackTop"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="360dp"
        android:layout_marginTop="48dp"
        android:backgroundTintMode="add"
        android:src="@drawable/baseline_arrow_back"
        app:backgroundTint="@color/yellowApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/applogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/star_wars_logo"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        android:background="@color/yellowApp"
        app:layout_constraintTop_toBottomOf="@+id/applogo"

        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="@string/favorite"
        android:textColor="#FFE81F"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        />

    <TextView
        android:id="@+id/noFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="@string/no_favorite"
        android:textColor="#FFE81F"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <ListView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnBackBottom"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_height="0dp"
        android:background="@color/white"
        >

    </ListView>

    <Button
        android:id="@+id/btnBackBottom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/yellowApp"
        android:text="@string/button_back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>