<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTintMode="screen"
    tools:context=".ui.MainActivity">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBackTop"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="360dp"
        android:layout_marginTop="48dp"
        android:backgroundTintMode="add"
        android:src="@drawable/baseline_arrow_back"
        app:backgroundTint="@color/yellowApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/applogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/star_wars_logo"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        android:background="@color/yellowApp"
        app:layout_constraintTop_toBottomOf="@+id/applogo"

        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="@string/seletec_character"
        android:textColor="#FFE81F"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar" />

    <ImageView
        android:id="@+id/btn_add_favorite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:srcCompat="@drawable/ic_star" />

    <ListView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:backgroundTint="@color/black"
        android:padding="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnBackBottom"
        app:layout_constraintTop_toBottomOf="@+id/title">

    </ListView>

    <Button
        android:id="@+id/btnFavorites"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/yellowApp"
        android:text="@string/btn_favorites"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/lista" />

    <Button
        android:id="@+id/btnBackBottom"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/yellowApp"
        android:text="@string/button_back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lista"
        app:layout_constraintHorizontal_bias="0.5"

        />

    <ProgressBar
        android:id="@+id/tbLoader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnBackBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/iv_empty_state"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_wifi_off"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnBackBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/tv_no_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ops_no_internet"
        android:textColor="@color/yellowApp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_empty_state" />


</androidx.constraintlayout.widget.ConstraintLayout>