<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/applogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/star_wars_logo"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        android:background="#FFE81F"
        app:layout_constraintTop_toBottomOf="@+id/applogo"

        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="Contato"
        android:textColor="#FFE81F"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        />

    <TextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="Entre em contato através das seguintes redes sociais."
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/contact">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/e_mail"
            android:textAlignment="center"
            android:textSize="16dp"

            />

        <ImageView
            android:id="@+id/imageEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:tint="@color/black"
            app:srcCompat="@android:drawable/sym_action_email" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLinkedIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/cardEmail">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/linked_in"
            android:textAlignment="center"
            android:textSize="16dp"

            />

        <ImageView
            android:id="@+id/imageLinkedIn"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            app:srcCompat="@drawable/ic_linkedin"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardGithub"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/cardLinkedIn">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/git_hub"
            android:textAlignment="center"
            android:textSize="16dp"

            />

        <ImageView
            android:id="@+id/imageLinkedIn2"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            app:srcCompat="@drawable/ic_github"
            />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>